2020-04-16  Jeff Chapman II  <jchapman@lock3software.com>

	* cp-tree.h (get_contract_semantic): Use TREE_LANG_FLAG_0, 2, and 3
	instead of spare1.
	(set_contract_semantic): Ditto.

2020-04-15  Jeff Chapman II  <jchapman@lock3software.com>

	* parser.c: Cleanup outdated FIXMEs.
	(cp_parser_cache_contract_condition): Use
	cp_parser_skip_to_closing_parenthesis_1.
	* search.c (check_final_overrider): Remove outdated FIXME.
	* semantics.c: Cleanup outdated FIXMEs.
	(start_checked_function_definition): Begin BCS_FN_BODY instead of
	BCS_NORMAL.
	(finish_checked_function_definition): Use finish_compound_stmt instead
	of finish_function_body.
	(start_postcondition_statement): push_stmt_list to capture the built
	tree.
	(finish_postcondition_statement): Replace inlined version of
	finish_compound_stmt with finish_compound_stmt and pop_stmt_list,
	using the new list created in start_postcondition_statement.

2020-04-12  Jeff Chapman II  <jchapman@lock3software.com>

	* cp-tree.h (cp_tree_index): Remove CPTI_ON_CONTRACT_VIOLATION_ALWAYS.
	(on_contract_violation_always_fn): Remove.
	* except.c (init_exception_processing): Remove always continue handler
	logic.
	* semantics.c (build_contract_handler_fn): Remove ALWAYS_CONTINUE
	related logic, including hacky workarounds.
	(build_contract_check): Remove CCS_ALWAYS case.

2020-04-08  Jeff Chapman II  <jchapman@lock3software.com>

	* semantics.c (build_checked_function_definition): Swap checked and
	unchecked DECL_RESULT so any references in the body of the unchecked
	function still point to its DECL_RESULT. This fixes a different
	transform for large return types.

2020-04-06  Jeff Chapman II  <jchapman@lock3software.com>

	* cp-tree.h (function_declarator_p): Newly public.
	* decl.c (match_contract_conditions): Invert return value to match
	name, update comments.
	(match_contracts): Ditto, update usage of above.
	(grokdeclarator): Use function_declarator_p, look for unseparated
	contract attributes in std_attributes too.