@@ -1,0 +1,19 @@
+// Test to ensure that diagnostic location for condition conversion is in the
+// right place.
+// { dg-do compile }
+// { dg-options "-std=c++2a -fcontracts" }
+
+
+template<typename T>
+void fn()
+  [[ pre: T{} ]] // { dg-error "could not convert" }
+{
+}
+
+struct Z { };
+
+int main(int, char**) {
+  fn<int>();
+  fn<Z>();
+  return 0;
+}
